--- a/graphs/style.css
+++ b/graphs/style.css
@@ -70,15 +70,15 @@ h1 {
     aspect-ratio: 940 / 768;
 }
 
-#graphCanvas {
+##graphCanvas {
     display: block;
     width: 100%;
     height: 100%;
     background-color: white;
     cursor: pointer;
     object-fit: contain;
-    touch-action: none;
-    -webkit-tap-highlight-color: transparent;
+    touch-action: none; /* Prevent browser touch gestures */
+    -webkit-tap-highlight-color: transparent; /* Remove tap highlight on iOS */
 }
 
 .controls {
